# toy-freertos-nucleo-f446

./: .gitignore  .gitmodules  Cargo.toml  build.rs  rust-toolchain.toml
.githooks/: pre-commit
src/: FreeRTOSConfig.h  freertos_ext.rs  local_shim.c  main.rs  msg.rs  router.rs  serial_nb.rs  task_blink.rs  task_button.rs  task_controller.rs  task_terminal.rs
