[package]
name = "toy-freertos-nucleo-f446"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.5"
cortex-m-rt = "0.7.1"
freertos-rust = "0.1.2"
panic-probe = { version = "0.3.0", features = ["print-rtt"] }

[build-dependencies]
freertos-cargo-build = "0.1.1"
