[package]
name = "toy-freertos-nucleo-f446"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.5"
cortex-m-rt = "0.7.1"
embedded-hal = "0.2.7"
freertos-rust = { path = "../FreeRTOS-rust/freertos-rust" }
heapless = "0.7.16"
nb = "1.0.0"
nucleo-f446re = "0.1.0"
panic-probe = { version = "0.3.0", features = ["print-rtt"] }
stm32f4xx-hal = "0.13.2"

[build-dependencies]
freertos-cargo-build = "0.1.1"
