[package]
name = "toy-freertos-nucleo-f446"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.1"
embedded-hal = "0.2.7"
freertos-rust = "0.1.2"
heapless = "0.7.16"
nb = "1.0.0"
nucleo-f446re = "0.1.0"
panic-probe = { version = "0.3.0", features = ["print-rtt"] }
stm32f4xx-hal = "0.20.0"

[build-dependencies]
freertos-cargo-build = "0.1.1"

[patch.crates-io]
freertos-rust = { path = "../FreeRTOS-rust/freertos-rust" }
nucleo-f446re = { path = "../nucleo-f446re" }
